<resources>
    <string name="app_name">Fut champ</string>
    <string name="title_activity_league_detail">LeagueDetailActivity</string>
    <string name="title_jornada">Jornada</string>
    <string name="title_equipos">Equipos</string>
    <string name="title_jugadores">jugadores</string>
    <string name="search_icon">Buscar</string>
    <string name="login_icon">Login</string>
    <string name="login_username_hint">Nombre de usuario</string>
    <string name="login_pwd_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="cancel_txt">Cancelar</string>
    <string name="add_new_league">Añadir liga</string>
    <string name="add_new_team">Añadir equipo</string>
    <string name="add_new_player">Añadir jugador</string>
    <string name="logout">Desconectar</string>
    <string name="league_json">LEAGUE_JSON</string>
    <string name="jornada_json">JORNADA_JSON</string>
    <string name="equipo_json">EQUIPO_JSON</string>
    <string name="jugador_json">JUGADOR_JSON</string>
    <string name="jugados">Jugados</string>
    <string name="goles">Goles</string>
    <!-- TABLA CLASIFICACION-->
    <string name="titulo_tabla">Tabla de clasificación</string>
    <string name="default_number">0</string>
    <string name="posicion_abreviado">Pos</string>
    <string name="puntos">Pts</string>
    <string name="partidos_jugados">PJ</string>
    <string name="partidos_ganados">PG</string>
    <string name="partidos_empatados">PE</string>
    <string name="partidos_perdidos">PP</string>
    <string name="goles_favor">GF</string>
    <string name="goles_contra">GC</string>
    <!-- FIN TABLA -->
    <string name="titulo_prox_partido">Próximos partidos</string>
    <string name="titulo_past_partido">Próximos jugados</string>
    <string name="titulo_jugadores">Jugadores</string>
    <!-- DETALLE DE JUGADOR -->
    <string name="nombre">Nombre</string>
    <string name="dorsal">Dorsal</string>
    <string name="posicion">Posición</string>
    <string name="contacto">Contacto</string>
    <string name="title_equipo">Equipo</string>
    <!-- SHARED PREFERENCES -->
    <string name="my_pref">myPref</string>
    <string name="my_username">userName</string>
    <string name="my_pwd">pwd</string>
    <string name="league_name">Nombre de la liga</string>
    <string name="add_league">Añadir</string>
    <string name="login_failed">Usuario o contraseña incorrectos</string>
    <string name="trash_icon">Eliminar</string>
    <string name="edit_icon">Editar</string>
    <string name="team_name">Nombre del equipo</string>
    <string name="add_name_liga">Añade un nombre a la liga</string>
    <string name="add_name_equipo">Añade un nombre al equipo</string>
    <string name="add_name_jugador">Añade un nombre a la liga</string>
    <string name="add_img">Añade una imagen</string>
    <string name="add_calendar">Añadir calendario</string>
    <string name="surname">Apellido</string>
    <string name="new_player">Nuevo jugador</string>
    <string name="add_new_playe_empty_field_msg">Rellena todos los campos</string>
    <string name="dni">DNI</string>
    <string name="mail">E-mail</string>
    <!-- Escoger cámara o archivo -->
    <string name="chooseImageDialogTittle">Escoge una opción</string>
    <string name="chooseImageDialogCamera">Tomar foto</string>
    <string name="chooseImageDialogImage">Seleccionar imagen</string>
    <string name="chooseImageDialogCancel">Cancelar</string>
    <string-array name="chooseImageDialog">
        <item>Tomar foto</item>
        <item>Seleccionar imagen</item>
        <item>Cancelar</item>
    </string-array>
    <!-- Permisos -->
    <string name="permission_granted">Permiso concedido</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="need_permission">Necesitas permisos de acceso</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_league_success">Liga añadida correctamente</string>
    <string name="hour">Hora</string>
    <string name="date">Fecha</string>
</resources>
