<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_jornada">

    <fragment
        android:id="@+id/navigation_jornada"
        android:name="net.jaumebalmes.grincon17.futchamp.fragments.JornadaFragment"
        android:label="@string/title_jornada"
        tools:layout="@layout/fragment_jornada" />

    <fragment
        android:id="@+id/navigation_equipos"
        android:name="net.jaumebalmes.grincon17.futchamp.fragments.EquiposFragment"
        android:label="@string/title_equipos"
        tools:layout="@layout/fragment_equipos" />

    <fragment
        android:id="@+id/navigation_jugadores"
        android:name="net.jaumebalmes.grincon17.futchamp.fragments.JugadoresFragment"
        android:label="@string/title_jugadores"
        tools:layout="@layout/fragment_jugadores" />
</navigation>
