<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_card_margin"

    app:cardElevation="@dimen/activity_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_card_margin">

        <ImageView
            android:id="@+id/imageViewEquipoLogo"
            android:layout_width="@dimen/card_view_logo_view_size"
            android:layout_height="@dimen/card_view_logo_view_size"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fut_champ_logo_25" />

        <TextView
            android:id="@+id/text_equipo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewEquipoLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:text="@string/posicion"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_extra_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewEquipoLogo"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_pos_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_number"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_equipo_pos"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/text_equipo_pos"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_pos"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider1"
            android:layout_width="1dp"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/text_equipo_pos"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_partidos_jugados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:text="@string/jugados"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_extra_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_jugados_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_number"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_equipo_partidos_jugados"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/text_equipo_partidos_jugados"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_partidos_jugados"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/text_equipo_partidos_jugados"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_goles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/text_view_margin"
            android:text="@string/goles"
            android:textAlignment="textStart"
            android:textSize="@dimen/text_size_extra_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_equipo_goles_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_number"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_equipo_goles"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/text_equipo_goles"
            app:layout_constraintTop_toBottomOf="@+id/text_equipo_goles"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>